<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp">

        <!-- Favourite button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_favorite"
            style="@style/FavoriteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_favorite_true"
            app:iconSize="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/add_fav" />

        <!-- Edit button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_edit"
            style="@style/EditButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_edit"
            app:iconSize="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/edite_recipe" />

        <!-- Recipes name-->
        <TextView
            android:id="@+id/text_view_recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_favorite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/recipes_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
